[project]
name = "operational-research.uni"
version = "0.0.1"
dependencies = [
    "matplotlib>=3.10.7",
    "pulp>=3.3.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "transportation-problem",
    "minimum-spanning-tree",
]

[tool.ruff]
preview = true
line-length = 89

[tool.ruff.lint]
select = [
    "ANN001",   # Missing type annotation for function argument
    "ANN2",     # Missing return type annotation
    "DOC",      # Pydoclint
    "D",        # Pydocstyle
    "E",        # Pycodestyle
    "F",        # Pyflakes
    "I",        # Isort
    "Q",        # Quotes
]

ignore = [
    "D1",       # Missing docstrings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg-type-hints-in-signature = true
